Improvements and optimizations
Took 1 hour 34 minutes